# STC_25

./: .gitignore  README.md  model_env.yml  project_env.yml  pyproject.toml  requirement.txt
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/config/: firebase.config.js
backend/src/controllers/: admin.controller.js  input.controller.js  user.controller.js
backend/src/db/: index.js
backend/src/firebase/: admin.js
backend/src/middlewares/: auth.admin.middlewares.js  auth.middlewares.js  multer.middlewares.js
backend/src/models/: maindisease.models.js  medicines.models.js  occupationlists.models.js  prevdisease.models.js  user.models.js  yogasanas.models.js
backend/src/routes/: admin.routes.js  user.routes.js
backend/src/utils/: dbimportexport.js
frontend/: package-lock.json  package.json
frontend/src/: App.js  firebaseConfig.js  index.css
frontend/src/api/: axiosInstance.js
frontend/src/components/Admin/: AdminFinetuneModal.jsx
frontend/src/components/Auth/: Login.jsx  ProtectedRoute.jsx  Signup.jsx
ml/: model_env.yml  project_env.yml  setup.py
ml/data/: another50col.xlsx
ml/notebook/: ayurvedic_predictor.ipynb
ml/notebook/data/: Disease_classification.xlsx
ml/src/: finetune_app.py  model_app.py
ml/src/components/: data_ingestion.py  data_transformation.py  model_finetuner.py  model_prediction.py
notebook/: ayurvedic_predictor.ipynb
notebook/data/: EDA_model_training.ipynb  ayurvedic_predictor.ipynb  for_final_finetuning_Disease_classification.csv  model_df.csv
src/components/: data_transformation.py
(+5 files in other folders)
