[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stc_project_25"
version = "0.0.1"
authors = [
  { name="Atharva" }
]
# You can also add description, readme, etc. here
# description = "A short description of the project."
# readme = "README.md"